client/src/components/Nav/style.css
nav {
    margin-bottom: 40px;
}

.btn {
    margin-bottom: 0px;
}

.btn:hover {
    margin-bottom: 0px;
}

.profileDropdownText {
    color: white;
}

.profileDropdownText:hover {
    color: white;
}


.profileDropdown {
}

.nav-item {
    color: white;
}

#profile-text {
    /* margin:0px; */
    padding-left: 10px;
    margin: auto;
    color: white;
    display: inline;
}

